Fix SVG preview XML parsing by using CSS whitespace preservation
- Remove \u00a0 (non-breaking space) hack from pprint-str that caused
  &nbsp; entities in SVG snapshots, which are invalid in XML
- Add white-space: pre to SVG text elements to preserve spaces properly
- Update snapshot CSS URL to nyancad.com

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -745,6 +745,7 @@ line.wirebb:hover {
 
 text {
     user-select: none;
+    white-space: pre;
 }
 
 text.identifier {
